lab1/Test/L1-A-11-45.output
Error Type B at Line 24
Error Type B at Line 31
Error Type B at Line 36
Error Type B at Line 41
Error Type B at Line 61
