lab1/Test/L1-A-11-45.cmm
int ;
struct jDpqZkI5ZLlZsvua {
  int ROesaSkIVH6YWySHeO4 ;
};
int R1HdzBfpE3Y , wXV [ 1168574923 ] 

;
float xSkAI5e1dZJrhM ( ) {
}
int ;
struct jwGMVEt ;
int ;
struct {
};
int Xs2Kry6yG 
;
struct pr ;
int ;
struct {
};
int ;
int Dw6qcimSRH_NR03 
;
struct Qh68q0gsgOi2STaz * ;
struct TOlQPZzA UJ 
;
int ;
int ;
int ;
int ;
- int K ( ) {
  YMdmg2PthP ;
  BfSt6tld85Pm ;
  if ( PP5TESi )   while ( eKL8lv18IPJIlE )   if ( 
    LQaL7H6jrYEfY0QxTi ) {
    ;
    SQSM9nvBp2gY ;
    xBAEf_orNMvZ ;
    XhSDYcdWxe ;
    f3MwAb 
    if ( sSbTuL3ce )     Va1rwrZdiDVODvei5 ;
else     if ( Fpoyw1kAN )     b9KIa5VVtAnUVeCCU6Br 
      ;


  }else   return YvTLMd2a_Y3n ;



}
int nPE ( ) {
  int q01DHg35w0x2x96R8d , Tl94NI , y_odgy0t1KboH 
    = KQQk4CLEKvU ;
}
int ;
int VygOVOAaEofDSYHgtm ( struct {
}uywo9VMMr6D5FNv5qWg , struct xFLOIS3TMrG8DstAsF Bf1pPT4kGfI 
  ) {
  Nz2wMuWm5 && S5INCUyVzMGcfTT9G > fECSq0n349OkUVryi1e 
    / ! - AleZVllEZXBIPeZVrWhh ( Y7y15sGbXaDvR6 , E2lwJO 
    = euOBjOZD7TmweyE || >= RZVn27WT4 - fd9uPbrAKN * - 
    g [ llwypq4m31 <= ZO7NJE + DkUwBkbYgVurXf ( xnbYRiOoBgag6pai89ch 
    , nS6h3 == gD + ( N2Ns1hDz2ep < ovqjJLKDIt [ TTNqAhxEEYw5sAYUuuaT 
    || p8iPHvy1tqRn / - ZzUyR1A ( Kk_QfcGR91lDk1mioBh 
    = SsX = n2yuGRNMg || Ri0mTjSPId != VxRcGiCwljbMJb 
    ) . BaohPTiodFRC6Rw - s5Wp1vaYx96c_8RbnQj . QlS2ePop8kOA 
    ] . S . C14lh5cGtQ . u1yQOUk59cRqqYBBk * 1642304496 
    / 1682590735.1315487033 ) ) . e62_uPVlP488bntNx9Z 
    - ! W0nugZxAgy2gHjm ] . ObL44n0 + lPq ( ) ) ;
}
struct ZIxNledxK92UfMQPOiH2 ;
